--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,6 +59,13 @@ a {
   display: flex;
   justify-content: flex-end;
 }
+.update_user_outermost{
+    width: 100%;
+    height: 730px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .homepage-container-left img{
   width: 350px;
