--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -10,7 +10,7 @@
 
   <div class="header__middle">
     <div class="header__option active">
-      <span class="material-icons"> home </span>
+      <a href="/posts"><span class="material-icons"> home </span></a>
     </div>
   </div>
   <div class="header__right">
@@ -26,37 +26,32 @@
     </span>
   </div>
 </div>
-<br>
-<img src="{{{url}}}" width="200px" 
-     height="auto"/> 
-<br>
+<div class="post">
+  <div class="profile_img_edit">
+  <img src="{{{url}}}" width="300" height="300" />
+  </div>
 
 <div class="homepage-outermost">
 <div class="container">
   <form id="update-user" action="/profile/edit" method="post">
     <h3>Email</h3>
     <p>Current: {{email}}<p>
-    <label for="email">New:</label>
     <input id="email" type="email" name="email" value="">
     <br>
     <h3>Password</h3>
     <p>Current: {{password}}<p>
-    <label for="password">New:</label>
     <input id="password" type="password" name="password" value="">
     <br>
     <h3>First Name</h3>
     <p>Current: {{firstName}}<p>
-    <label for="firstName">New:</label>
     <input id="firstName" type="firstName" name="firstName" value="">
     <br>
     <h3>Last Name</h3>
     <p>Current: {{lastName}}<p>
-    <label for="lastName">New:</label>
     <input id="lastName" type="lastName" name="lastName" value="">
     <br>
     <h3>Profile Pic</h3>
     <p>Current: {{profilePic}}<p>
-    <label for="profilePic">New:</label>
     <input id="profilePic" type="profilePic" name="profilePic" value="">
     <br>
     <input id="submit" type="submit" value="Submit">
@@ -64,4 +59,3 @@
 </div>
 </div>
 
-<a href="/profile">Back to profile</a>
