--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -2,7 +2,7 @@
   <div class="homepage-outer">
     <div class="homepage-container-left">
       <img src="images/acebook_logo.svg" alt="">
-      <p>Acebook helps you connect and share <br>with the people in your life.</p>
+      <p>acebook helps axolotyls <br>meet in the pond.</p>
     </div>
 
     <div class="container">
@@ -10,11 +10,6 @@
         <input type="email" name="email" id="user_email" placeholder=" Email address" required>
         <input type="password" name="password" id="user_password" placeholder=" Password" required>
         <input type="submit" id="login_submit_btn" value="Log In">
-
-
-
-        <a href="#" id="forgot_pass"> Forgotten password?</a>
-        <div class="forgotten"></div>
       </form>
 
       <p>{{error}}</p>
@@ -23,19 +18,7 @@
         <button id="register_acc">Create New Account</button>
       </form>
       <br>
-      <p><b>Create a Page</b> for a celebrity, brand.</b></p>
     </div>
 
   </div>
 </div>
-
-{{!-- <form id="new-session-form" action="/sessions" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form> --}}
-
-{{!-- <p>{{error}}</p>
-<a href="/users/new">Signup</a> --}}
