Search bar functionality added.
Co-authored-by: ruben wilson <ruben-wilson@users.noreply.github.com>

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,3 +114,19 @@ input#password {
   align-items: center;
   flex-direction: column;
 }
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  flex-direction: column;
+  margin-left: -242px;
+  margin-top: -32rem;
+}
+
+.friends-list {
+  padding: 0;
+  margin-left: 0;
+}
