Clicking logo redirect functionality works.
Co-authored-by: ruben wilson <ruben-wilson@users.noreply.github.com>

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,3 +130,14 @@ input#password {
   padding: 0;
   margin-left: 0;
 }
+
+.posts-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  flex-direction: column;
+  margin-left: -242px;
+  margin-top: -32rem;
+}
