--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -177,7 +177,6 @@
 
           {{!-- <div id="blank-message!">{{blank}}</div> --}}
         </form>
-
       </div>
 
       <div class="messageSender__bottom">
@@ -224,6 +223,13 @@
           <p>{{this.message}}</p>
         </div>
 
+
+        {{!-- {{#each this.comments}}
+        <div class="comment__bottom">
+          <p></p>
+        </div>
+        {{/each}} --}}
+
         <div class="post__image">
           {{!-- <img src={{}} alt="" /> --}}
         </div>
@@ -247,6 +253,15 @@
           </div>
         </div>
       </div>
+      
+        {{#each this.comments}}
+          <div class="comment__bottom">{{this.comment}}</div>
+        {{/each}}
+          
+        <form id="new-comment-form" action="/posts" method="post">
+          <input id="comment" type="text" name="comment" value="" placeholder="Leave a comment here">
+          <input id="submit-comment" type="submit" value="COMMENT">
+        </form>
       {{/each}}
       <!-- post ends -->
 
