wip likes styling w Curtis

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -164,7 +164,7 @@
       <div class="post__options">
         <div class="post__option">
           <p id="like{{this._id}}">{{this.likes.length}}</p>
-          <button class="like" type="submit" value="{{this._id}}"> <span class="material-icons"> thumb_up </span></button>
+          <button id="button{{this._id}}" class="like" type="submit" value="{{this._id}}"> <span class="material-icons"> thumb_up </span></button>
         </div>
 
         <div class="post__option">
@@ -180,3 +180,5 @@
       <!-- post ends -->
   </div>
 </div>
+
+
