--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,7 @@
+<div class="post-feed-container">
 <h1>Timeline</h1>
+
+<a class="new-post-link" href="/posts/new">New post</a>
 
 <div class = "posts">
   {{#each posts}}
@@ -7,7 +10,7 @@
   <li>{{this.user_id.username}}</li>
   <li>{{this.time_posted}}</li>
   
-  <div class = "likes">
+  <div class = "likes-container">
     <div class="post-like-counter" id="counter-{{this._id}}">{{this.likes.length}}</div>
     <button class="like-button" id="button-{{this._id}}">
       <img src="/images/thumbs-up.png" width="20" height="20" alt="thumbs-up-button" />
@@ -24,6 +27,6 @@
 </div> 
 {{/each}}
 
-<a class="new-post-link" href="/posts/new">New post</a>
+</div>
 
 
