--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -178,6 +178,7 @@
           {{!-- <div id="blank-message!">{{blank}}</div> --}}
         </form>
 
+        {{!-- EXPERIMENTAL UPLOAD --}}
         <form method="post" action="posts/upload" enctype="multipart/form-data">
           <input type="file" name="image"><br>
           <button type="submit" name="upload">Upload</button>
