Corrected timeline page positioning.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,5 +139,5 @@ input#password {
   min-height: 100vh;
   flex-direction: column;
   margin-left: -242px;
-  margin-top: -32rem;
+  margin-top: -25%;
 }
