likes/username on posts complete and tests passing

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -146,7 +146,7 @@
       <div class="post__top">
         <img class="user__avatar post__avatar" src="images/img/Makers.png" alt="" />
         <div class="post__topInfo">
-          <h3>{{this._id}}</h3> <!-- Need to link post to user firstname  -->
+          <a id="post_name" href="/profile"><h3>{{this.user.firstName}}</h3></a> <!-- Need to link post to user firstname  -->
           <p>{{this.createdAt}}</p>
         </div>
       </div>
