--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -10,7 +10,7 @@
 
   <div class="header__middle">
     <div class="header__option active">
-      <a href="/posts"><span class="material-icons"> home </span></a>
+      <a id="home_icon" href="/posts"><span class="material-icons"> home </span></a>
     </div>
   </div>
   <div class="header__right">
@@ -29,7 +29,7 @@
 
 <div class="post">
   <div class="profile_img">
-  <img src="{{{url}}}" width="300" height="300" />
+  <img id="profile_pic" src="{{{url}}}" width="300" height="300" />
   </div>
   <div class="post__bottom">
   <ul>
