--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -229,7 +229,8 @@
       </div>
 
       <div class="post__image">
-        {{!-- <img src={{}} alt="" /> --}}
+        <img src="data:image/png;base64, {{this.img}}">
+        {{!-- <img src="data:{{this}}/{{this.img.contentType}};base64,{{this.img.data.toString}}('base64')%>"> --}}
       </div>
 
       <div class="post__options">
